--- a/Code/bm-webapp/src/main/webapp/CSS/Style.css
+++ b/Code/bm-webapp/src/main/webapp/CSS/Style.css
@@ -194,6 +194,13 @@ body
 	margin-bottom:30px;
 	font-size:10pt;
 }
+#content-header-2
+{
+        margin-left:25px;
+	margin-bottom:30px;
+	font-size:10pt;
+        padding-top: 20px;
+}
 #content-footer
 {
 	margin-left:25px;
