--- a/Code/bm-webapp/src/main/webapp/resumenGeneral.vm
+++ b/Code/bm-webapp/src/main/webapp/resumenGeneral.vm
@@ -94,6 +94,8 @@
                         </tr>
                         #end
                     </table>
+            </div>
+            <div id="content-header-2">
                     <table id="content-table">
                         <tr>
                             <th>Densidad de Defectos:</th>
